package tralleno.Controleurs;

import javafx.event.ActionEvent;
import javafx.event.EventHandler;
import tralleno.Modele.ModeleBureau;

public class ControlDragAndDrop implements EventHandler<ActionEvent> {

    private ModeleBureau modele;

    @Override
    public void handle(ActionEvent actionEvent) {
        // TO DO
    }
}
