package tralleno.Controleurs;

import javafx.event.ActionEvent;
import javafx.event.EventHandler;
import tralleno.Modele.ModeleBureau;

public class ControlNavVues implements EventHandler<ActionEvent>{

    private ModeleBureau modele;

    public void handle(ActionEvent actionEvent) {
        // TO DO
    }
}
