package tralleno.Taches;

import tralleno.Taches.Tache;

import java.io.Serializable;

public class TacheFille extends Tache implements Serializable {
    public TacheFille(String t, String d) {
        super(t, d);
    }
}
