package tralleno.Vues;

import tralleno.Modele.Sujet;

public class VueGantt implements Observateur{
    @Override
    public void actualiser(Sujet s) {
        // TO DO
    }
}
