package tralleno.Vues;

import tralleno.Modele.Sujet;

/**
 * Vue des tâches sous forme de liste. Les tâches sont contenues dans une section qu'on peut développer
 */
public class VueListe implements Observateur{

    /**
     *
     * @param s
     */
    @Override
    public void actualiser(Sujet s) {
        // TO DO
    }
}
