package tralleno.Vues;

import tralleno.Modele.Sujet;

/**
 * Vue des tâches sous forme de tableau kanban. Les sections sont ordonnées par colonnes et comportent des tâches
 */
public class VueTableau implements Observateur{
    @Override
    public void actualiser(Sujet s) {
        // TO DO
    }
}
